# HZB

./: .dockerignore  .gitignore  .gitlab-ci.yml  .npmrc  .oxfmtrc.json  .oxlintrc.json  CHANGELOG.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  rsbuild.config.mjs  skills-dev.sh  tsconfig.json  views.js
apps/api/: .env.example  Dockerfile  pyproject.toml
apps/api/app/: main.py
apps/api/app/api/: deps.py
apps/api/app/api/v1/: routes.py
apps/api/app/core/: config.py
apps/api/app/db/: session.py
apps/api/app/models/: note.py
apps/api/app/schemas/: auth.py  instance.py  note.py  plugin.py
apps/api/app/services/: access_control.py  ai.py  clipper.py  document_ingest.py  markdown_index.py  password_manager.py  rag_index.py  search.py  security.py  sync_bus.py  vault_sync.py
apps/api/app/workers/: sync_worker.py
apps/api/knowledge_cloud_api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
apps/api/scripts/: seed_demo.py
apps/api/tests/: test_api_smoke.py
backend-pseudo/: system-module-api.md
deploy/: backend-deploy.ps1  docker-compose.local.yml  frontend-deploy.ps1
docs/: 01-架构设计基线.md  02-整体项目架构设计.md  03-数据库初始化脚本.sql  04-接口文档-openapi.yaml  05-测试用例.md  06-代码版本与迭代管理规范.md  07-需求与变更记录.md  08-环境与缺失配置清单.md  09-本机环境安装指南.md  10-系统管理模块架构与流程.md  11-系统管理模块建表.sql  12-系统管理表结构设计说明.md  13-系统管理模块使用手册.md  14-系统管理模块开发手册.md  15-系统管理模块测试用例.md  16-系统管理模块-openapi.yaml  24-辅助功能模块架构与流程.md  25-辅助功能模块建表.sql  26-辅助功能模块表结构说明.md  27-辅助功能模块使用手册.md  28-辅助功能模块开发手册.md  29-辅助功能模块测试用例.md  30-辅助功能模块-openapi.yaml  architecture.md  database-design-task-platform.md  (+7 more)
(+265 files in other folders)
